--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="forgot_your_password">Forgot your password?</string>
     <string name="iniciar_sesion">Iniciar sesion</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="default_web_client_id">1046984218662-3lmn9fde7lgodrffjtbns3uu43k1ujrj.apps.googleusercontent.com</string>
 </resources>
