--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="iniciar_sesion">Iniciar sesion</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="default_web_client_id">1046984218662-3lmn9fde7lgodrffjtbns3uu43k1ujrj.apps.googleusercontent.com</string>
+    <string name="permission_rationale_location">La aplicación necesita acceder a tu ubicación para registrar tu proceso</string>
+
 </resources>
